--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="https://maps.googleapis.com/maps/api/js"></script>
   </head>
   <body>
+  <h1>Connected...</h1>
     <div class="container"></div>
   </body>
   <script src="/bundle.js"></script>
