[setup] adds bootstrap to project and adds meta tags to index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/src/styles/bootstrap.min.css">
     <link rel="stylesheet" href="/src/styles/style.css">
-    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
   </head>
   <body>
-  <h1>Connected...</h1>
-    <div class="container"></div>
+    <div class="container-fluid">
+      <div class="row" id="app">
+      </div>
+    </div>
   </body>
   <script src="/bundle.js"></script>
 </html>
